--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,25 +6,16 @@ WORKDIR /var/www/src
 COPY ./php.ini /usr/local/etc/php/
 
 RUN apk update && apk add --no-cache \
-  freetype-dev \
-  libjpeg-turbo-dev \
   libpng-dev \
-  libmcrypt-dev \
-  git \
-  vim \
   emacs \
-  unzip \
   tzdata \
-  libltdl \
   nodejs-npm \
   && docker-php-ext-install \
      pdo_mysql \
      mysqli \
-     mbstring \
-     gd \
-     iconv \
-  && : "タイムゾーン設定" \
+  && : "タイムゾーン設定(必要なファイルだけ抜き取る)" \
   && cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
-  && apk del tzdata \
+  && : "不要パッケージの削除" \
+  && apk del libpng-dev tzdata \
   && : "composerインストール" \
   && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
